--- a/style.css
+++ b/style.css
@@ -30,9 +30,9 @@ body {
     background-color: dimgrey;
     border-radius: 3px;
 }
-label.logo {
+/*label.logo {
     font-size: 35px;
     color: black;
     font-style: oblique ;
    
-}
+}*/
