--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ p {
     padding-right: 30px;
 }
 .footer {
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
